fix result section visibility

--- a/style.css
+++ b/style.css
@@ -138,12 +138,15 @@ body {
   justify-content: center;
   align-items: center;
   z-index: 1000;
+
   transform: translateX(100%);
   transition: transform 0.4s cubic-bezier(0.25, 1, 0.5, 1);
+  visibility: hidden;
 }
 
-#result-section:not(.hidden) {
+#result-section.active{
   transform: translateX(0);
+  visibility: visible;
 }
 
 .hidden {
